--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,50 @@
 :root {
-    --background: #fff;
+    --primary: #0079FF;
+    /* light */
+    --background-light: #fff;
+    --on-background-light: #141d2e;
+    --surface-light: #ebf0ff;
+    --surface-variant-light: #dce0ea;
+    --surface-variant-outline-light: #d2d6e0;
+    --surface-variant-outline-hover-light: #b4bacb;
+
+    /* dark */
+    --background-dark: #141d2e;
+    --on-background-dark: #fff;
+    --surface-dark: #1a243d;
+    --surface-variant-dark: #1f2a47;
+    --surface-variant-outline-dark: #233153;
+    --surface-variant-outline-hover-dark: #3d588f;
+
+    --weight-regular: 400;
+    --weight-medium: 500;
+    --weight-semiBold: 600;
+    --weight-bold: 700;
+
+    --radius-pill: 500px;
+    --radius-circle: 50%;
+    --radius-circle: 50%;
 }
+
+[data-theme='light'] {
+    --background: var(--background-light);
+    --on-background: var(--on-background-light);
+    --surface: var(--surface-light);
+    --surface-variant: var(--surface-variant-light);
+    --surface-variant-outline: var(--surface-variant-outline-light);
+    --surface-variant-outline-hover: var(--surface-variant-outline-hover-light);
+
+}
+
+[data-theme='dark'] {
+    --background: var(--background-dark);
+    --on-background: var(--on-background-dark);
+    --surface: var(--surface-dark);
+    --surface-variant: var(--surface-variant-dark);
+    --surface-variant-outline: var(--surface-variant-outline-dark);
+    --surface-variant-outline-hover: var(--surface-variant-outline-hover-dark);
+}
+
 *,
 *::before,
 *::after {
@@ -49,6 +93,8 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: var(--background);
+    color: var(--on-background);
+    font-weight: var(--weight-regular);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
