--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
     --background-light: #fff;
     --on-background-light: #141d2e;
     --surface-light: #ebf0ff;
+    --surface-hover-light: #ccd9ff;
+    --surface-outline-light: #e1e6f5;
+    --surface-outline-hover-light: #bbc6e8;
     --surface-variant-light: #dce0ea;
     --surface-variant-outline-light: #d2d6e0;
     --surface-variant-outline-hover-light: #b4bacb;
@@ -11,7 +14,10 @@
     /* dark */
     --background-dark: #141d2e;
     --on-background-dark: #fff;
-    --surface-dark: #1a243d;
+    --surface-dark: hsl(223, 40%, 17%);
+    --surface-hover-dark: hsl(223, 40%, 21%);
+    --surface-outline-dark: hsl(223, 40%, 20%);
+    --surface-outline-hover-dark: hsl(223, 40%, 40%);
     --surface-variant-dark: #1f2a47;
     --surface-variant-outline-dark: #233153;
     --surface-variant-outline-hover-dark: #3d588f;
@@ -21,8 +27,8 @@
     --weight-semiBold: 600;
     --weight-bold: 700;
 
+    --radius-8: 8px;
     --radius-pill: 500px;
-    --radius-circle: 50%;
     --radius-circle: 50%;
 }
 
@@ -30,6 +36,9 @@
     --background: var(--background-light);
     --on-background: var(--on-background-light);
     --surface: var(--surface-light);
+    --surface-hover: var(--surface-hover-light);
+    --surface-outline: var(--surface-outline-light);
+    --surface-outline-hover: var(--surface-outline-hover-light);
     --surface-variant: var(--surface-variant-light);
     --surface-variant-outline: var(--surface-variant-outline-light);
     --surface-variant-outline-hover: var(--surface-variant-outline-hover-light);
@@ -40,6 +49,9 @@
     --background: var(--background-dark);
     --on-background: var(--on-background-dark);
     --surface: var(--surface-dark);
+    --surface-hover: var(--surface-hover-dark);
+    --surface-outline: var(--surface-outline-dark);
+    --surface-outline-hover: var(--surface-outline-hover-dark);
     --surface-variant: var(--surface-variant-dark);
     --surface-variant-outline: var(--surface-variant-outline-dark);
     --surface-variant-outline-hover: var(--surface-variant-outline-hover-dark);
@@ -95,11 +107,14 @@ body {
     background-color: var(--background);
     color: var(--on-background);
     font-weight: var(--weight-regular);
+    font-size: 0.875rem;
+}
+
+#root {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
-
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
