--- a/src/styles/Global.module.css
+++ b/src/styles/Global.module.css
@@ -12,9 +12,21 @@ header .container {
     gap: 16px;
 }
 
+main {
+    flex-grow: 1;
+}
+
+main .container {
+    display: grid;
+    grid-template-columns: 280px 1fr;
+    gap: 36px;
+    flex-grow: 1;
+}
+
 .text-primary {
     color: var(--primary);
 }
+
 
 .icon-btn {
     display: grid;
@@ -27,7 +39,7 @@ header .container {
     border: 1px solid var(--surface-variant-outline);
 }
 
-.icon-btn svg {
+.icon {
     font-size: 24px;
 }
 
