--- a/src/components/TabList/TabList.module.css
+++ b/src/components/TabList/TabList.module.css
@@ -8,10 +8,10 @@
     place-items: center;
     position: relative;
     height: 48px;
-    font-size: 14px;
     margin-bottom: 4px;
     opacity: 0.8;
     flex: 1 0 25%;
+    font-size: var(--body);
 }
 
 .item:not(.active):hover {
