--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,11 @@
     /* light */
     --background-light: #fff;
     --on-background-light: #141d2e;
-    --surface-light: #ebf0ff;
-    --surface-hover-light: #ccd9ff;
-    --surface-outline-light: #e1e6f5;
-    --surface-outline-hover-light: #bbc6e8;
-    --surface-variant-light: #dce0ea;
-    --surface-variant-outline-light: #d2d6e0;
-    --surface-variant-outline-hover-light: #b4bacb;
+    --surface-light: hsl(225, 100%, 96%);
+    --on-surface-light: hsl(221, 11%, 40%);
+    --surface-hover-light: hsl(225, 100%, 90%);
+    --surface-outline-light: hsl(225, 50%, 92%);
+    --surface-outline-hover-light: hsl(225, 49%, 82%);
     --color-opacity-50-light: rgba(0, 0, 0, 0.5);
     --color-opacity-5-light: rgba(0, 0, 0, 0.05);
 
@@ -17,20 +15,28 @@
     --background-dark: #141d2e;
     --on-background-dark: #fff;
     --surface-dark: hsl(223, 40%, 17%);
+    --on-surface-dark: hsl(223, 23%, 61%);
     --surface-hover-dark: hsl(223, 40%, 21%);
     --surface-outline-dark: hsl(223, 40%, 20%);
     --surface-outline-hover-dark: hsl(223, 40%, 40%);
-    --surface-variant-dark: #1f2a47;
-    --surface-variant-outline-dark: #233153;
-    --surface-variant-outline-hover-dark: #3d588f;
     --color-opacity-50-dark: rgba(255, 255, 255, 0.5);
     --color-opacity-5-dark: rgba(255, 255, 255, 0.05);
 
+    /* font-size */
+    --title-1: 48px;
+    --title-2: 24px;
+    --title-3: 18px;
+    --body: 16px;
+    --label-1: 14px;
+    --label-2: 12px;
+
+    /* font-weight */
     --weight-regular: 400;
     --weight-medium: 500;
     --weight-semiBold: 600;
     --weight-bold: 700;
 
+    /* border-radius */
     --radius-8: 8px;
     --radius-pill: 500px;
     --radius-circle: 50%;
@@ -40,12 +46,10 @@
     --background: var(--background-light);
     --on-background: var(--on-background-light);
     --surface: var(--surface-light);
+    --on-surface: var(--on-surface-light);
     --surface-hover: var(--surface-hover-light);
     --surface-outline: var(--surface-outline-light);
     --surface-outline-hover: var(--surface-outline-hover-light);
-    --surface-variant: var(--surface-variant-light);
-    --surface-variant-outline: var(--surface-variant-outline-light);
-    --surface-variant-outline-hover: var(--surface-variant-outline-hover-light);
     --color-opacity-50: var(--color-opacity-50-light);
     --color-opacity-5: var(--color-opacity-5-light);
 
@@ -55,12 +59,10 @@
     --background: var(--background-dark);
     --on-background: var(--on-background-dark);
     --surface: var(--surface-dark);
+    --on-surface: var(--on-surface-dark);
     --surface-hover: var(--surface-hover-dark);
     --surface-outline: var(--surface-outline-dark);
     --surface-outline-hover: var(--surface-outline-hover-dark);
-    --surface-variant: var(--surface-variant-dark);
-    --surface-variant-outline: var(--surface-variant-outline-dark);
-    --surface-variant-outline-hover: var(--surface-variant-outline-hover-dark);
     --color-opacity-50: var(--color-opacity-50-dark);
     --color-opacity-5: var(--color-opacity-5-dark);
 }
@@ -115,7 +117,7 @@ body {
     background-color: var(--background);
     color: var(--on-background);
     font-weight: var(--weight-regular);
-    font-size: 0.875rem;
+    font-size: var(--label-1)
 }
 
 #root {
