--- a/src/styles/Global.module.css
+++ b/src/styles/Global.module.css
@@ -1,15 +1,14 @@
 .container {
     width: 100%;
-    max-width: 1280px;
+    max-width: 1600px;
     margin-inline: auto;
-    padding-inline: 32px;
+    padding-inline: 40px;
 }
 
 header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 16px;
 }
 
 main {
@@ -19,7 +18,7 @@ main {
 main .container {
     display: grid;
     grid-template-columns: 280px 1fr;
-    gap: 36px;
+    gap: 40px;
     flex-grow: 1;
 }
 
@@ -27,16 +26,15 @@ main .container {
     color: var(--primary);
 }
 
-
 .icon-btn {
     display: grid;
     place-items: center;
     width: 48px;
     height: 48px;
-    background-color: var(--surface-variant);
+    background-color: var(--surface);
     border-radius: var(--radius-circle);
     color: var(--on-background);
-    border: 1px solid var(--surface-variant-outline);
+    border: 1px solid var(--surface-outline);
 }
 
 .icon {
@@ -45,5 +43,9 @@ main .container {
 
 .icon-btn:hover {
     filter: brightness(0.9);
-    border-color: var(--surface-variant-outline-hover);
+    border-color: var(--surface-outline-hover);
+}
+
+.tab-panel {
+    padding-top: 32px;
 }
