프로젝트 리스트 JSON 데이터로 변경 및 클릭 시 모달 내용 동적 업데이트

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -32,6 +32,7 @@
     grid-template-columns: repeat(2, 1fr);
     column-gap: 3rem;
     align-items: center;
+    color: var(--on-surface);
 }
 
 .close {
