--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -86,60 +86,5 @@
 }
 
 .item:hover .demo-icon {
-    transform: translateX(.25rem);
-}
-
-.right {
-
-}
-
-.modal-title {
-    font-size: var(--title-2);
-    font-weight: var(--weight-semiBold);
-    margin-bottom: 8px;
-}
-
-.modal-desc {
-    line-height: 1.7;
-    margin-bottom: 8px;
-}
-
-.link {
-    display: inline-block;
-    font-weight: var(--weight-semiBold);
-    cursor: pointer;
-}
-
-.link:hover {
-    text-decoration: underline;
-}
-
-.modal-skils {
-    line-height: 1.7;
-    margin-bottom: 8px;
-}
-
-.skils {
-    display: flex;
-    align-items: center;
-    gap: 4px;
-}
-
-.view-demo-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    font-weight: var(--weight-semiBold);
-    border-radius: var(--radius-8);
-    border: 1px solid var(--surface-outline);
-    height: 40px;
-    padding-inline: 24px;
-    background-color: var(--surface);
-    color: var(--primary);
-}
-
-.view-demo-btn:hover {
-    background-color: var(--surface-hover);
-    border-color: var(--surface-outline-hover);
+    transform: translateX(6px);
 }
