--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,19 @@
 .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: var(--background);
     display: flex;
     align-items: center;
     height: 80px;
     background-color: var(--background);
+    z-index: 100;
+    transition: background-color 0.3s;
+}
+
+.header.active {
+    background-color: var(--surface);
 }
 
 .logo {
