--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,7 @@ button { cursor: pointer; }
 
 body {
     margin: 0;
+    padding-block: 96px 32px;
     font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
         "Helvetica Neue", sans-serif;
@@ -121,7 +122,8 @@ body {
     background-color: var(--background);
     color: var(--on-background);
     font-weight: var(--weight-regular);
-    font-size: var(--label-1)
+    font-size: var(--label-1);
+    transition: background-color 0.3s;
 }
 
 #root {
