--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -11,7 +11,7 @@
     z-index: 10;
     opacity: 0;
     visibility: hidden;
-    transition: 0.3s;
+    transition: opacity 0.3s;
 }
 
 .modal-overlay.active {
@@ -32,7 +32,6 @@
     grid-template-columns: repeat(2, 1fr);
     column-gap: 3rem;
     align-items: center;
-    color: var(--on-surface);
 }
 
 .close {
