--- a/src/components/ProfileSidebar/ProfileSidebar.module.css
+++ b/src/components/ProfileSidebar/ProfileSidebar.module.css
@@ -1,3 +1,9 @@
+.profile {
+    position: sticky;
+    top: 96px;
+    left: 0;
+}
+
 .img-holder {
     width: 280px;
     height: 280px;
@@ -35,6 +41,7 @@
     padding-inline: 24px;
     background-color: var(--surface);
     color: var(--primary);
+    transition: background-color 0.3s, border-color 0.3s;
 }
 
 .link:hover {
