--- a/src/styles/Global.module.css
+++ b/src/styles/Global.module.css
@@ -19,6 +19,7 @@ main .container {
     display: grid;
     grid-template-columns: 280px 1fr;
     gap: 36px;
+    align-items: flex-start;
 }
 
 .text-primary {
