--- a/src/index.css
+++ b/src/index.css
@@ -113,7 +113,7 @@ button { cursor: pointer; }
 
 body {
     margin: 0;
-    font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+    font-family: "Poppins", "Nanum Gothic", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
