--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     gap: 18px;
+    margin-top: 40px;
 }
 
 .svg {
@@ -20,10 +21,6 @@
 .heading {
     font-size: var(--title-1);
     font-weight: var(--weight-medium);
-}
-
-.heading span {
-    display: inline-block;
 }
 
 .cursor {
