--- a/src/styles/Global.module.css
+++ b/src/styles/Global.module.css
@@ -23,6 +23,7 @@ main .container {
 }
 
 .text-primary {
+    display: inline-block;
     color: var(--primary);
 }
 
@@ -47,5 +48,5 @@ main .container {
 }
 
 .tab-panel {
-    padding-top: 16px;
+    padding-top: 24px;
 }
