ProfileSide, Home 컴포넌트 반응형 CSS 적용

--- a/src/styles/Global.module.css
+++ b/src/styles/Global.module.css
@@ -50,3 +50,20 @@ main .container {
 .tab-panel {
     padding-top: 24px;
 }
+
+
+@media screen and (max-width: 992px) {
+    main .container {
+        grid-template-columns: 240px 1fr;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .container {
+        padding-inline: 16px;
+    }
+    
+    main .container {
+        display: block;
+    }
+}
