--- a/src/components/ProfileSidebar/ProfileSidebar.module.css
+++ b/src/components/ProfileSidebar/ProfileSidebar.module.css
@@ -70,3 +70,24 @@
     padding-top: 16px;
     border-top: 1px solid var(--surface-outline);
 }
+
+@media screen and (max-width: 992px) {
+    .img-holder {
+        width: 200px;
+        height: 200px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .profile {
+        position: static;
+    }
+
+    .footer {
+        display: none;
+    }
+
+    .item {
+        margin-block: 12px;
+    }
+}
