--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -19,6 +19,8 @@
 }
 
 .heading {
+    display: flex;
+    gap: 10px;
     font-size: var(--title-1);
     font-weight: var(--weight-medium);
 }
@@ -50,4 +52,12 @@
 
 .link:hover {
     color: var(--primary);
+}
+
+@media screen and (max-width: 825px) {
+    .heading {
+        flex-direction: column;
+        align-items: center;
+        gap: 18px;
+    }
 }
