--- a/src/pages/Blog/Blog.module.css
+++ b/src/pages/Blog/Blog.module.css
@@ -5,6 +5,6 @@
 }
 .card-list {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
     gap: 24px;
 }
