--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -24,7 +24,7 @@
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 24px;
 }
 
@@ -46,7 +46,6 @@
     padding-bottom: 16px;
     border-bottom: 1px solid var(--primary);
     margin-bottom: 24px;
-    color: var(--primary);
 }
 
 .title {
