modal 반응형 CSS 추가 및 로딩 컴포넌트 완료

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -6,7 +6,7 @@
     background-color: var(--background);
     display: flex;
     align-items: center;
-    height: 80px;
+    height: var(--header-height);
     background-color: var(--background);
     z-index: 4;
     transition: background-color 0.3s;
