--- a/src/styles/Global.module.css
+++ b/src/styles/Global.module.css
@@ -48,7 +48,9 @@ main .container {
 }
 
 .tab-panel {
+    position: relative;
     padding-top: 24px;
+    min-height: calc(100vh - var(--header-height) + 16px - 53px);
 }
 
 
