--- a/src/styles/Global.module.css
+++ b/src/styles/Global.module.css
@@ -53,6 +53,16 @@ main .container {
     min-height: calc(100vh - var(--header-height) + 16px - 53px);
 }
 
+.absolute-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: translateZ(0);
+}
+
 
 @media screen and (max-width: 992px) {
     main .container {
