--- a/src/components/ModalContent/ModalContent.module.css
+++ b/src/components/ModalContent/ModalContent.module.css
@@ -62,3 +62,10 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    .modal-desc {
+        max-height: 160px;
+        overflow-y: auto;
+    }
+}
+
