화면 768px 이하일 때 tab-list sticky 및 스크롤 기능 구현

--- a/src/components/ModalContent/ModalContent.module.css
+++ b/src/components/ModalContent/ModalContent.module.css
@@ -30,7 +30,7 @@
 
 .modal-skils {
     line-height: 1.6;
-    margin-block: 8px;
+    margin-top: 8px;
     color: var(--on-background);
 }
 
@@ -50,6 +50,7 @@
     background-color: var(--on-background);
     color: var(--background);
     transition: color 0.3s;
+    margin-top: 8px;
 }
 
 .view-demo-btn:hover {
