--- a/src/components/ProfileSidebar/ProfileSidebar.module.css
+++ b/src/components/ProfileSidebar/ProfileSidebar.module.css
@@ -28,6 +28,10 @@
     margin-bottom: 12px;
 }
 
+.intro {
+    font-size: var(--label-1);
+}
+
 .link {
     display: flex;
     justify-content: center;
@@ -49,15 +53,18 @@
 }
 
 .list {
-    margin-block: 24px;
+    padding-block: 24px;
 }
 
 .item .a{
     display: flex;
     align-items: center;
     gap: 8px;
-    margin-block: 16px;
     cursor: pointer;
+}
+
+.item:not(:last-child) .a {
+    margin-bottom: 16px;
 }
 
 .item:hover .text {
@@ -65,7 +72,6 @@
 }
 
 .footer {
-    margin-top: 24px;
     padding-top: 16px;
     border-top: 1px solid var(--surface-outline);
 }
@@ -84,9 +90,5 @@
 
     .footer {
         display: none;
-    }
-
-    .item {
-        margin-block: 12px;
     }
 }
