--- a/src/components/TabList/TabList.module.css
+++ b/src/components/TabList/TabList.module.css
@@ -1,6 +1,7 @@
 .list {
     display: flex;
     border-bottom: 1px solid var(--color-opacity-5);
+    background-color: var(--background);
 }
 
 .item {
@@ -11,7 +12,6 @@
     margin-bottom: 4px;
     opacity: 0.8;
     flex: 1 0 25%;
-    font-size: var(--body);
 }
 
 .item:not(.active):hover {
@@ -33,4 +33,14 @@
     height: 4px;
     background-color: var(--primary);
     border-radius: var(--radius-pill);
+}
+
+@media screen and (max-width: 768px) {
+    .list {
+        position: sticky;
+        top: var(--header-height);
+        z-index: 10;
+        width: 100vw;
+        margin-left: calc(-50vw + 50%);
+    }
 }
