--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@ body {
     background-color: var(--background);
     color: var(--on-background);
     font-weight: var(--weight-regular);
-    font-size: var(--label-1);
+    font-size: var(--body);
     transition: background-color 0.3s;
 }
 
@@ -147,6 +147,7 @@ code {
 @media screen and (max-width: 768px) {
     :root {
         --header-height: 72px;
+        --body: 14px;
     }
 
     #root {
